Correct scene card truncation

--- a/ui/v2.5/src/components/Scenes/styles.scss
+++ b/ui/v2.5/src/components/Scenes/styles.scss
@@ -16,6 +16,12 @@
 .card-section {
   margin-bottom: 0;
   padding: .5rem 1rem 0 1rem;
+
+  &-title {
+    overflow: hidden;
+    overflow-wrap: normal;
+    text-overflow: ellipsis;
+  }
 }
 
 .scene-card-check {
